clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_ivopts_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/loop-ivopts-1.c" (c, x86_64-unknown-linux-gnu)
global foo.tmp : float[4] = Zero { ty: Array { element_type: Single, size: 4 } } [internal, default, align 16, dso_local]
global foo.t16 : float[16] = ConstArray { ty: Array { element_type: Single, size: 16 }, elts: Array([CirFloat { ty: Single, value: "1.000000e+00" }, CirFloat { ty: Single, value: "2.000000e+00" }, CirFloat { ty: Single, value: "3.000000e+00" }, CirFloat { ty: Single, value: "4.000000e+00" }, CirFloat { ty: Single, value: "5.000000e+00" }, CirFloat { ty: Single, value: "6.000000e+00" }, CirFloat { ty: Single, value: "7.000000e+00" }, CirFloat { ty: Single, value: "8.000000e+00" }, CirFloat { ty: Single, value: "9.000000e+00" }, CirFloat { ty: Single, value: "1.000000e+01" }, CirFloat { ty: Single, value: "1.100000e+01" }, CirFloat { ty: Single, value: "1.200000e+01" }, CirFloat { ty: Single, value: "1.300000e+01" }, CirFloat { ty: Single, value: "1.400000e+01" }, CirFloat { ty: Single, value: "1.500000e+01" }, CirFloat { ty: Single, value: "1.600000e+01" }]), trailing_zeros_num: 0 } [internal, default, align 16, dso_local]

fn foo(%arg0: float*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: float*):
        %6 = alloca float*, "x", align 8
        %7 = alloca s32i, "i", align 4
        %8 = alloca s32i, "j", align 4
        %9 = alloca s32i, "k", align 4
        %10 = alloca float, "temp", align 4
        store %arg0, %6
        %11 = get_global @foo.t16 : float[16]*
        %12 = get_global @foo.tmp : float[4]*
        scope {
                %37 = const 0 : s32i
                store %37, %7, align 4
                for cond {
                        %70 = load %7 : s32i, align 4
                        %71 = const 4 : s32i
                        cmp
                        condition %72
                } step {
                        %38 = load %7 : s32i, align 4
                        inc
                        store %39, %7, align 4
                        yield
                } body {
                        scope {
                                %40 = const 3 : s32i
                                %41 = load %7 : s32i, align 4
                                sub
                                store %42, %9, align 4
                                %43 = const 5 : s32i
                                %44 = load %9 : s32i, align 4
                                mul
                                %46 = cast(integral) %45 : s64i
                                get_element
                                %48 = load %47 : float, align 4
                                store %48, %10, align 4
                                scope {
                                        %49 = load %9 : s32i, align 4
                                        %50 = const 1 : s32i
                                        %51 = add %49, %50 : s32i [nsw]
                                        store %51, %8, align 4
                                        for cond {
                                                %67 = load %8 : s32i, align 4
                                                %68 = const 4 : s32i
                                                cmp
                                                condition %69
                                        } step {
                                                %52 = load %8 : s32i, align 4
                                                inc
                                                store %53, %8, align 4
                                                yield
                                        } body {
                                                scope {
                                                        %54 = load %9 : s32i, align 4
                                                        %55 = load %8 : s32i, align 4
                                                        %56 = const 4 : s32i
                                                        mul
                                                        %58 = add %54, %57 : s32i [nsw]
                                                        %59 = cast(integral) %58 : s64i
                                                        get_element
                                                        %61 = load %60 : float, align 4
                                                        %62 = load %10 : float, align 4
                                                        fmul
                                                        %64 = load %9 : s32i, align 4
                                                        %65 = cast(integral) %64 : s64i
                                                        get_element
                                                        store %63, %66, align 4
                                                        yield
                                                }
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %13 = const 0 : s64i
        get_element
        %15 = load %14 : float, align 16
        %16 = const 0 : s64i
        %17 = load %6 : float*, align 8
        ptr_stride
        store %15, %18, align 4
        %19 = const 1 : s64i
        get_element
        %21 = load %20 : float, align 4
        %22 = const 1 : s64i
        %23 = load %6 : float*, align 8
        ptr_stride
        store %21, %24, align 4
        %25 = const 2 : s64i
        get_element
        %27 = load %26 : float, align 8
        %28 = const 2 : s64i
        %29 = load %6 : float*, align 8
        ptr_stride
        store %27, %30, align 4
        %31 = const 3 : s64i
        get_element
        %33 = load %32 : float, align 4
        %34 = const 3 : s64i
        %35 = load %6 : float*, align 8
        ptr_stride
        store %33, %36, align 4
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca float[4], "x", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = cast(array_to_ptrdecay) %1 : float*
        call @foo(%3) [all]
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %0 : s32i
        return %5
}
