clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_ivopts_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/loop-ivopts-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn check(%arg0: u32i*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i*):
        %44 = alloca u32i*, "l", align 8
        %45 = alloca s32i, "i", align 4
        store %arg0, %44
        scope {
            %46 = const 0 : s32i
            store %46, %45, align 4
            for cond: {
                %78 = load %45 : s32i, align 4
                %79 = const 288 : s32i
                %80 = cmp lt %78, %79 : bool
                condition %80
            } step: {
                %47 = load %45 : s32i, align 4
                %48 = inc %47 : s32i [nsw]
                store %48, %45, align 4
                yield
            } do {
                scope {
                    %49 = load %45 : s32i, align 4
                    %50 = cast(integral) %49 : s64i
                    %51 = load %44 : u32i*, align 8
                    %52 = ptr_stride %51, %50 : u32i*
                    %53 = load %52 : u32i, align 4
                    %54 = const 7 : s32i
                    %55 = load %45 : s32i, align 4
                    %56 = const 256 : s32i
                    %57 = cmp lt %55, %56 : bool
                    %58 = ternary %57 ? { : bool
                        %77 = const true : bool
                        yield %77
                    } : {
                        %74 = load %45 : s32i, align 4
                        %75 = const 280 : s32i
                        %76 = cmp ge %74, %75 : bool
                        yield %76
                    }
                    %59 = cast(bool_to_int) %58 : s32i
                    %60 = add %54, %59 : s32i [nsw]
                    %61 = load %45 : s32i, align 4
                    %62 = const 144 : s32i
                    %63 = cmp ge %61, %62 : bool
                    %64 = ternary %63 ? { : bool
                        %71 = load %45 : s32i, align 4
                        %72 = const 256 : s32i
                        %73 = cmp lt %71, %72 : bool
                        yield %73
                    } : {
                        %70 = const false : bool
                        yield %70
                    }
                    %65 = cast(bool_to_int) %64 : s32i
                    %66 = add %60, %65 : s32i [nsw]
                    %67 = cast(integral) %66 : u32i
                    %68 = cmp ne %53, %67 : bool
                    if %68 {
                        %69 = get_global @abort : (() -> void)*
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = alloca u32i[288], "l", align 16
    %3 = const 0 : s32i
    store %3, %0
    scope {
        %34 = const 0 : s32i
        store %34, %1, align 4
        for cond: {
            %41 = load %1 : s32i, align 4
            %42 = const 144 : s32i
            %43 = cmp lt %41, %42 : bool
            condition %43
        } step: {
            %35 = load %1 : s32i, align 4
            %36 = inc %35 : s32i [nsw]
            store %36, %1, align 4
            yield
        } do {
            %37 = const 8 : u32i
            %38 = load %1 : s32i, align 4
            %39 = cast(integral) %38 : s64i
            %40 = get_element %2[%39] : u32i*
            store %37, %40, align 4
            yield
        }
        yield
    }
    scope {
        for cond: {
            %31 = load %1 : s32i, align 4
            %32 = const 256 : s32i
            %33 = cmp lt %31, %32 : bool
            condition %33
        } step: {
            %25 = load %1 : s32i, align 4
            %26 = inc %25 : s32i [nsw]
            store %26, %1, align 4
            yield
        } do {
            %27 = const 9 : u32i
            %28 = load %1 : s32i, align 4
            %29 = cast(integral) %28 : s64i
            %30 = get_element %2[%29] : u32i*
            store %27, %30, align 4
            yield
        }
        yield
    }
    scope {
        for cond: {
            %22 = load %1 : s32i, align 4
            %23 = const 280 : s32i
            %24 = cmp lt %22, %23 : bool
            condition %24
        } step: {
            %16 = load %1 : s32i, align 4
            %17 = inc %16 : s32i [nsw]
            store %17, %1, align 4
            yield
        } do {
            %18 = const 7 : u32i
            %19 = load %1 : s32i, align 4
            %20 = cast(integral) %19 : s64i
            %21 = get_element %2[%20] : u32i*
            store %18, %21, align 4
            yield
        }
        yield
    }
    scope {
        for cond: {
            %13 = load %1 : s32i, align 4
            %14 = const 288 : s32i
            %15 = cmp lt %13, %14 : bool
            condition %15
        } step: {
            %7 = load %1 : s32i, align 4
            %8 = inc %7 : s32i [nsw]
            store %8, %1, align 4
            yield
        } do {
            %9 = const 8 : u32i
            %10 = load %1 : s32i, align 4
            %11 = cast(integral) %10 : s64i
            %12 = get_element %2[%11] : u32i*
            store %9, %12, align 4
            yield
        }
        yield
    }
    %4 = cast(array_to_ptrdecay) %2 : u32i*
    call @check(%4) [all]
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
